--- a/index.html
+++ b/index.html
@@ -234,10 +234,11 @@
 
   <div class="content">
     <h2 style="text-align:left;">Motivation</h2>
-    <img class="summary-img" src="./resources/limit_motions.png" style="width:80%;margin-bottom: -10px;">
+    <img class="summary-img" src="./resources/combined.png" style="width:95%;margin-bottom: -10px;">
     <br>
-    <p> Existing feed-forward motion prediction methods struggle with short-term and sparse predictions and often fail to deliver accurate 3D motion estimations while optimization-based approaches require substantial time to process a single video.
-      We are the first method capable of <strong>efficiently</strong> tracking <strong>every pixel</strong> in <strong>3D space</strong> over <strong>hundreds of frames</strong> from monocular videos.
+    <p> Existing motion prediction methods struggle with short-term, sparse predictions and often fail to deliver accurate 3D motion estimations while optimization-based approaches require substantial time to process a single video.
+      We are the first method capable of <strong>efficiently</strong> tracking <strong>every pixel</strong> in <strong>3D space</strong> over <strong>hundreds of frames</strong> from monocular videos, and achieves 
+      <strong>state-of-the-art accuracy</strong> on 3D tracking benchmarks.
     </p>
   </div>
 
@@ -408,7 +409,9 @@
     <h2 style="text-align:left;">Non-rigid Structure from motion</h2>
     <center>
       <iframe
-        width="800px" height="400px" src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+        width="800px" height="400px" src="http://localhost:8000/build/?playbackPath=http://localhost:8000/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+
+        <!-- width="800px" height="400px" src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1"> -->
       </iframe>
     </center>
 
