# update viser build

--- a/index.html
+++ b/index.html
@@ -409,13 +409,17 @@
         </div>
   </div>
 
+  <!-- width="800px" height="400px" src="http://localhost:8000/build/?playbackPath=http://localhost:8000/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1"> -->
+  <!-- https://rsrd-anonymous.github.io -->
   <div class="content">
     <h2 style="text-align:left;"><strong>Non-rigid Structure from motion</strong></h2>
     <br>
     <center>
       <iframe
-        width="800px" height="400px" src="http://localhost:8000/build/?playbackPath=http://localhost:8000/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
 
+        width="800px" height="400px" src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+
+        
         <!-- width="800px" height="400px" src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1"> -->
       </iframe>
     </center>
