--- a/pose_est.html
+++ b/pose_est.html
@@ -113,19 +113,19 @@
         gap: 2em;
       ">
     <iframe
-      src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+      src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
     </iframe>
     <iframe
-      src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_horsejump-high.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+      src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_horsejump-high.viser&initDistanceScale=0.3&initHeightOffset=0.1">
     </iframe>
     <iframe
-      src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_parkour.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+      src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_parkour.viser&initDistanceScale=0.3&initHeightOffset=0.1">
     </iframe>
     <iframe
-      src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_dog.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+      src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_dog.viser&initDistanceScale=0.3&initHeightOffset=0.1">
     </iframe>
     <iframe
-      src="https://snap-research.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_tortoise_swim.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+      src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_tortoise_swim.viser&initDistanceScale=0.3&initHeightOffset=0.1">
     </iframe>
   </div>
 </body>
