--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     <br>
     <center>
       <iframe
-        width="800px" height="400px" src="https://rsrd-anonymous.github.io/DELTA/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
+        width="800px" height="400px" src="https://rsrd-anonymous.github.io/build/?playbackPath=https://snap-research.github.io/DELTA/resources/viser_records/recording_car-roundabout.viser&initDistanceScale=0.3&initHeightOffset=0.1">
       </iframe>
     </center>
 
