--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <a href="https://payeah.net/">Peiye Zhuang<sup>1</sup></a>
       </span>
       <span>
-        <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan<sup>2,4</sup></a>
+        <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan<sup>2</sup></a>
       </span>
       <span>
         <a href="https://kalo-ai.github.io/">Evangelos Kalogerakis<sup>2,3</sup></a>
@@ -145,15 +145,14 @@
         <a href="https://research.snap.com/"><sup>1</sup> Snap Inc</a>
         <a href="https://www.cics.umass.edu/"><sup>2</sup> UMass Amherst</a>
         <a href="https://www.ece.tuc.gr/en/home"><sup>3</sup> TU Crete</a>
-        <a href="https://mitibmwatsonailab.mit.edu/"><sup>4</sup> MIT-IBM Watson AI Lab</a>
       </span>
     </p>
 
     <font size="+2">
       <p style="text-align: center;">
-        <a href="files\paper.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://arxiv.org/abs/xxx" target="_blank">[Arxiv (soon)]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/xxx" target="_blank">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="files/paper.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#" target="_blank" onclick="return false;">[Arxiv (soon)]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#" target="_blank" onclick="return false;">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
     </font>
@@ -232,7 +231,7 @@
 
   <div class="content">
     <h2 style="text-align:left;"><strong>Motivation</strong></h2>
-    <img class="summary-img" src="./resources/combined.png" style="width:95%;margin-bottom: -10px;">
+    <img class="summary-img" src="./resources/combined.png" style="width:100%;margin-bottom: -10px;">
     <br>
     <p> Existing motion prediction methods struggle with short-term, sparse predictions and often fail to deliver accurate 3D motion estimations while optimization-based approaches require substantial time to process a single video.
       We are the first method capable of <strong>efficiently</strong> tracking <strong>every pixel</strong> in <strong>3D space</strong> over <strong>hundreds of frames</strong> from monocular videos, and achieves
@@ -502,8 +501,8 @@
       <strong>Acknowledgements:</strong> We borrow this template from <a href="https://monst3r-project.github.io/">MonST3R</a> and <a href="https://snap-research.github.io/4Real/">4Real</a>.
       The tracking visualization is inspired by <a href="https://co-tracker.github.io/">CoTracker</a>. The camera pose visualization tool is borrowed from <a href="https://monst3r-project.github.io/">MonST3R</a>.
       We sincerely thank the authors for the open-source code.
-      <!-- This website is built using the template of <a href="https://snap-research.github.io/4Real/">4Real</a> and <a href="https://monst3r-project.github.io/">MonST3R</a>. -->
     </p>
+
   </div>
 </footer>
 
