--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <font size="+2">
       <p style="text-align: center;">
         <a href="files/paper.pdf" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://arxiv.org/abs/2410.24211" target="_blank" onclick="return false;">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://arxiv.org/abs/2410.24211" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#" target="_blank" onclick="return false;">[Code (soon)]</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
       </p>
