--- a/compare_spatracker_tapvid3d.html
+++ b/compare_spatracker_tapvid3d.html
@@ -4,10 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="description"
-              content="This is the supplementary webpage for ICLR 2025 submission -- TAPE3D.">
+              content="This is the supplementary webpage for ICLR 2025 -- DELTA.">
         <meta name="keywords" content="Dense 3D Tracking, 2D Tracking, Point Tracking">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TAPE3D</title>
+        <title>DELTA</title>
       
         <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
               rel="stylesheet">
