--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <p>
       <strong>Acknowledgements:</strong> We borrow this template from <a href="https://monst3r-project.github.io/">MonST3R</a> and <a href="https://snap-research.github.io/4Real/">4Real</a>.
       The tracking visualization is inspired by <a href="https://co-tracker.github.io/">CoTracker</a>. The camera pose visualization tool is borrowed from <a href="https://monst3r-project.github.io/">MonST3R</a>.
-      We sincerely thank the authors for the open-source code.
+      We sincerely thank the authors for the open-source code. This project has received funding from the European Research Council (ERC) under the Horizon research and innovation programme (Grant agreement No. 101124742).
     </p>
 
   </div>
